Fix for bug 188872 (Switching between type of HTMLInputElement incorrectly reset size from Int to pixel). Fix by Ruslan Ismailov <croo@nm.ru>, r=sicking, sr=peterv.